--- a/views/main.hbs
+++ b/views/main.hbs
@@ -32,7 +32,7 @@
     </div>
 
     <script>
-      function signOut() { // Handle sign-out logic // Example:
+      function signOut() { 
       window.location.href = "/"; } 
   function previewImage(event) {
     const input = event.target;
